--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
       </select>
     </div>
 
+    <!--Play Option for the user-->
+    <div class="playOption">
+      <label>Play as:
+        <button id = "playAsX" class="symbolBtn active">X</button>
+        <button id = "playAsO" class="symbolBtn active">O</button>
+      </label>
+    </div>
+    
     <!-- Scoreboard -->
     <div id="scoreboard" class="scoreboard">
       <h3>
